# to_be_adopted

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
applications/: admin.py  forms.py  models.py  views.py
applications/migrations/: 0001_initial.py  0002_petapplication_mark_as_read.py  0003_auto_20201013_1734.py
authentication/: forms.py  urls.py  views.py
notifications/: models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
pets/: forms.py  models.py  urls.py  views.py
pets/migrations/: 0001_initial.py  0002_auto_20201008_0630.py  0003_profile.py  0004_auto_20201008_0651.py  0005_auto_20201013_1104.py  0006_auto_20201014_1706.py  0007_auto_20201015_1309.py  0008_auto_20201015_2038.py  0009_auto_20201019_1807.py  0010_auto_20201019_2055.py  0011_auto_20201019_2100.py  0012_auto_20201019_2112.py  0013_auto_20201019_2128.py  0014_auto_20201019_2210.py  0015_auto_20201019_2227.py
tba/: apps.py
tbauser/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tbauser/migrations/: 0001_initial.py  0002_adoptuser_favorites.py
templates/: 404.html  500.html  adopted.html  available.html  base.html  create_pet.html  edit_pet.html  favorites.html  generic_form.html  homepage.html  index.html  login.html  notifications.html  pet_detail.html  signup.html  user_detail.html  users.html
to_be_adopted/: asgi.py  settings.py  urls.py  wsgi.py
to_be_adopted.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
