[tool.poetry]
name = "to-be-adopted"
version = "0.1.0"
description = ""
authors = ["corbin creech <creechcorbin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
pillow = "^7.2.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
